[project]
name = "scuec-campus-news"
version = "1.0.0"
description = "中南民族大学校园资讯 MCP 服务"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.0.0", "httpx>=0.27.0", "beautifulsoup4>=4.12.0", "lxml>=5.0.0"]

[project.scripts]
scuec-campus-news = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
